# Energysystem

./: .gitignore  Anmerkung für Prof  Anmerkung für Prof.txt  LICENSE  Makefile  README.md  docker-compose.yml
Energieversorger/: .gitignore  CMakeLists.txt  Dockerfile  README.md
Energieversorger/src/cpp/: Client.cpp  RpcController.cpp  main.cpp
Energieversorger/src/cpp/Komponenten/: Erzeuger.cpp  Komponente.cpp  KomponentenController.cpp  Verbraucher.cpp
Energieversorger/src/header/: Client.h  RpcController.h
Energieversorger/src/header/Komponenten/: Erzeuger.h  Komponente.h  KomponentenController.h  Verbraucher.h
Energieversorger/src/proto/: energieversorger.proto  server.proto
Erzeuger/: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
Erzeuger/src/cpp/: Atom.cpp  Erzeuger.cpp  Kohle.cpp  Simulator.cpp  Solar.cpp  UDPKommunikation.cpp  Wind.cpp  ZentralenKommunikation.cpp  main.cpp
Erzeuger/src/cpp/Kommunikation/: MqttKommunikation.cpp  RpcController.cpp  UDPKommunikation.cpp  UDPServer.cpp  ZentralenKommunikation.cpp
Erzeuger/src/cpp/Komponente/: Atom.cpp  Erzeuger.cpp  Kohle.cpp  Solar.cpp  Wind.cpp
Erzeuger/src/cpp/UDP/: UDPKommunikation.cpp
Erzeuger/src/header/: Atom.h  Erzeuger.h  Kohle.h  Simulator.h  Solar.h  UDPKommunikation.h  Wind.h  ZentralenKommunikation.h
Erzeuger/src/header/Kommunikation/: MqttKommunikation.h  RpcController.h  UDPCallback.h  UDPKommunikation.h
Erzeuger/src/header/Komponente/: Atom.h  Erzeuger.h  Wind.h
Erzeuger/src/header/UDP/: UDPCallback.h  UDPKommunikation.h  UDPServer.h
Erzeuger/src/proto/: erzeuger.proto
LoadBalancer/: CMakeLists.txt  Dockerfile  README.md
LoadBalancer/src/cpp/: Zentrale.cpp  main.cpp
LoadBalancer/src/cpp/UDPServer/: UDPSender.cpp  UDPServer.cpp
LoadBalancer/src/cpp/WebServer/: TcpServer.cpp  TcpServerSocket.cpp
LoadBalancer/src/cpp/Zentrale/: Zentrale.cpp  ZentralenController.cpp
LoadBalancer/src/header/UDPServer/: UDPCallback.h  UDPSender.h
LoadBalancer/src/header/WebServer/: TcpServer.h  TcpServerSocket.h
LoadBalancer/src/header/Zentrale/: Zentrale.h  ZentralenController.h
Test/: test_termin2.txt
Test/Prak3/: test_termin3.txt
Test/Prak4/: test_termin4.txt
Test/Prak5/: Test_Prak5.txt
Verbraucher/: CMakeLists.txt  Dockerfile  README.md
Verbraucher/src/cpp/: Haushalt.cpp  Simulator.cpp  UDPKommunikation.cpp  Unternehmen.cpp  Verbraucher.cpp  ZentralenKommunikation.cpp  main.cpp
Verbraucher/src/cpp/Kommunikation/: MqttKommunikation.cpp  UDPKommunikation.cpp  UDPServer.cpp  ZentralenKommunikation.cpp
Verbraucher/src/cpp/Komponente/: Haushalt.cpp  Unternehmen.cpp  Verbraucher.cpp
Verbraucher/src/cpp/UDP/: UDPKommunikation.cpp  UDPServer.cpp
Verbraucher/src/header/: Haushalt.h  Simulator.h  UDPKommunikation.h  Unternehmen.h  Verbraucher.h  ZentralenKommunikation.h
Verbraucher/src/header/Kommunikation/: MqttKommunikation.h  UDPKommunikation.h  ZentralenKommunikation.h
Verbraucher/src/header/Komponente/: Haushalt.h  Verbraucher.h
Verbraucher/src/header/UDP/: UDPKommunikation.h
Zentrale/: .dockerignore  CMakeLists.txt  Dockerfile  README.md
Zentrale/src/cpp/: Erzeuger.cpp  HTTPIntepreter.cpp  Komponente.cpp  KomponentenController.cpp  Socket.cpp  TCPSocket.cpp  UDPServer.cpp  UDPSocket.cpp  Verbraucher.cpp  Webserver.cpp  WebserverHandler.cpp  Zentrale.cpp  main.cpp
Zentrale/src/cpp/Komponenten/: Erzeuger.cpp  Komponente.cpp  KomponentenController.cpp  Verbraucher.cpp
Zentrale/src/cpp/Rpc/: ErzeugerRpcClient.cpp  RpcServer.cpp  ZentralenSyncRpcServer.cpp
Zentrale/src/cpp/UDPSender/: KomponentenUdpSender.cpp  UDPSender.cpp
Zentrale/src/cpp/UDPServer/: UDPServer.cpp
Zentrale/src/cpp/WebServer/: HTMLGenerator.cpp  HTTPIntepreter.cpp  HttpContextHandlerController.cpp  Webserver.cpp
Zentrale/src/header/: Erzeuger.h  HTTPCallback.h  HTTPIntepreter.h  Komponente.h  KomponentenController.h  Socket.h  TCPSocket.h  UDPCallback.h  UDPServer.h  UDPSocket.h  Verbraucher.h  Webserver.h  WebserverHandler.h  Zentrale.h
Zentrale/src/header/Komponenten/: Erzeuger.h  Komponente.h  KomponentenController.h  Verbraucher.h
Zentrale/src/header/Rpc/: ErzeugerRpcClient.h  MqttInterfaceZentrale.h  RpcServer.h  ZentralenSyncRpcServer.h
Zentrale/src/header/UDPSender/: KomponentenUdpSender.h  UDPSender.h
Zentrale/src/header/UDPServer/: UDPCallback.h  UDPServer.h
Zentrale/src/header/WebServer/: HTMLGenerator.h  HTTPCallback.h  HTTPIntepreter.h  HttpContextHandler.h  HttpContextHandlerController.h  HttpDataCallback.h  Webserver.h
Zentrale/src/proto/: erzeuger.proto  onlyZentrale.proto  rpcServer.proto
mosquitto/: mosquitto.conf
